modified:   admin/app/views/spree/admin/custom_domains/_custom_domains.html.erb 	modified:   admin/app/views/spree/admin/custom_domains/_form.html.erb 	modified:   admin/app/views/spree/admin/custom_domains/index.html.erb 	modified:   admin/app/views/spree/admin/dashboard/_store_preview.html.erb 	modified:   admin/app/views/spree/admin/dashboard/analytics.html.erb 	modified:   admin/app/views/spree/admin/gift_cards/_table_filter_dropdown.html.erb 	modified:   admin/app/views/spree/admin/invitations/_invitation.html.erb 	modified:   admin/app/views/spree/admin/invitations/new.html.erb 	modified:   admin/app/views/spree/admin/oauth_applications/index.html.erb 	modified:   admin/app/views/spree/admin/option_types/_form.html.erb 	modified:   admin/app/views/spree/admin/option_types/index.html.erb 	modified:   admin/app/views/spree/admin/orders/_customer_summary.html.erb 	modified:   admin/app/views/spree/admin/payment_methods/_form.html.erb 	modified:   admin/app/views/spree/admin/payment_methods/index.html.erb 	modified:   admin/app/views/spree/admin/profile/edit.html.erb 	modified:   admin/app/views/spree/admin/promotion_rules/forms/_item_total.html.erb 	modified:   admin/app/views/spree/admin/promotions/_form.html.erb 	modified:   admin/app/views/spree/admin/promotions/_rules.html.erb 	modified:   admin/app/views/spree/admin/promotions/edit.html.erb 	modified:   admin/app/views/spree/admin/promotions/form/_kind.html.erb 	modified:   admin/app/views/spree/admin/promotions/form/_settings.html.erb 	modified:   admin/app/views/spree/admin/promotions/new.html.erb 	modified:   admin/app/views/spree/admin/properties/index.html.erb 	modified:   admin/app/views/spree/admin/shared/_content_header.html.erb 	modified:   admin/app/views/spree/admin/shared/_seo.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/form/_display.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/form/_estimated_transit_business_days.html.erb 	modified:   admin/app/views

--- a/admin/app/views/spree/admin/shipping_methods/form/_display.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/form/_display.html.erb
@@ -9,14 +9,14 @@
         </div>
 
         <p class="form-text text-muted small mt-2">
-          This will be displayed to customers.
+          <%= Spree.t(:shipping_method_name_help) %>
         </p>
       </div>
 
       <div class="col-lg-6">
         <div class="form-group">
-          <%= f.label :display_on %>
-          <%= f.select :display_on, display_on_options, {}, { class: 'custom-select custom-select' } %>
+          <%= f.label :display_on, Spree.t(:display_on) %>
+          <%= f.select :display_on, display_on_options, {}, { class: 'custom-select' } %>
           <%= f.error_message_on :display_on %>
         </div>
       </div>
@@ -31,7 +31,7 @@
         </div>
 
         <p class="form-text text-muted small mt-2">
-          This will be displayed to admins.
+          <%= Spree.t(:shipping_method_internal_name_help) %>
         </p>
       </div>
 
