--- a/admin/app/views/spree/admin/dashboard/_setup_progress.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_setup_progress.html.erb
@@ -1,14 +1,14 @@
 <div class="mb-3 card rounded-lg" id="setup_progress">
   <div class="card-body">
     <div class="mb-3">
-      Your overall setup progress
+      <%= Spree.t(:your_overall_setup_progress) %>
       <span class="float-right badge badge-<%= current_store.setup_completed? ? 'success' : 'info' %>">
         <% if current_store.setup_completed? %>
           <%= icon('check', class: 'text-success') %>
         <% end %>
 
         <span>
-          <strong><%= current_store.setup_tasks_done %></strong> of <%= current_store.setup_tasks_total %> steps done
+          <strong><%= current_store.setup_tasks_done %></strong> of <%= current_store.setup_tasks_total %> <%= Spree.t(:steps_done) %>
         </span>
       </span>
     </div>
