--- a/admin/app/views/spree/admin/payment_methods/descriptions/_store_credit.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/descriptions/_store_credit.html.erb
@@ -1,1 +1,1 @@
-Allow customers to use store credit for payment. Issue store credit to customers from the admin.
+<%= Spree.t('store_credit.description') %>
