--- a/admin/app/views/spree/admin/products/index.html.erb
+++ b/admin/app/views/spree/admin/products/index.html.erb
@@ -13,6 +13,5 @@
 </div>
 
 <p class="documentation-link-container">
-  Learn more about
-  <%= external_link_to 'managing products', 'https://spreecommerce.org/docs/user/manage-products' %>
+  <%= external_link_to Spree.t(:learn_more_about_managing_products), 'https://spreecommerce.org/docs/user/manage-products' %>
 </p>
