--- a/admin/app/views/spree/admin/storefront/edit.html.erb
+++ b/admin/app/views/spree/admin/storefront/edit.html.erb
@@ -27,7 +27,7 @@
             <%= f.text_field :name, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :meta_description, 'Search description' %>
+            <%= f.label :meta_description, Spree.t(:search_description) %>
             <%= f.text_area :meta_description, class: 'form-control', style: 'min-height: 5em', data: { controller: 'textarea-autogrow'} %>
           </div>
           <div class="custom-control custom-checkbox mb-2">
@@ -35,7 +35,7 @@
             <%= f.label :preferred_index_in_search_engines, Spree.t(:index_in_search_engines), class: 'custom-control-label' %>
           </div>
           <p class="text-muted small pl-4 mb-0">
-            Checking this box will allow your site to appear in search engines.
+            <%= Spree.t(:index_in_search_engines_help) %>
           </p>
         </div>
       </div>
@@ -52,7 +52,7 @@
             <%= f.label :preferred_password_protected, Spree.t(:password_protected), class: 'custom-control-label' %>
           </div>
           <p class="text-muted small pl-4">
-            Checking this box will put your storefront behind a password.
+            <%= Spree.t(:password_protected_help) %>
           </p>
           
           <div class="form-group <%= @store.prefers_password_protected? ? '' : 'd-none' %>" data-reveal-target="item">
@@ -97,16 +97,16 @@
         <div class="card-body">
           <div class="form-group">
             <%= f.label :favicon_image do %>
-              Favicon image
-              <%= help_bubble("A favicon is a small image that appears in the tab of your web browser when you visit a website. It is usually a tiny square or rectangle with a unique design or logo that represents the website") %>
+              <%= Spree.t(:favicon_image) %>
+              <%= help_bubble(Spree.t(:favicon_image_info)) %>
             <% end %>
             <%= render 'active_storage/upload_form', form: f, field_name: :favicon_image, width: 120, height: 120, crop: true %>
           </div>
 
           <div class="form-group mb-0">
             <%= f.label :social_image do %>
-              Preview image
-              <%= help_bubble("This image will be used when your store is shared on social media or in search engines.") %>
+              <%= Spree.t(:preview_image) %>
+              <%= help_bubble(Spree.t(:preview_image_info)) %>
             <% end %>
             <%= render 'active_storage/upload_form', form: f, field_name: :social_image, width: 1200, height: 630, crop: true %>
           </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="card-body">
           <div class="alert alert-info">
-            Social links will be displayed in the footer of your store
+            <%= Spree.t(:social_media_info) %>
           </div>
           <% Spree::Store::SUPPORTED_SOCIAL_NETWORKS.each do |social| %>
             <div class="form-group">
