--- a/admin/app/views/spree/admin/themes/index.html.erb
+++ b/admin/app/views/spree/admin/themes/index.html.erb
@@ -8,9 +8,7 @@
 
 <%= content_for :page_alerts do %>
   <div class="alert alert-info">
-    If you wan't to make changes to theme but don't want to go live with them,
-    you can make a copy of the theme and make changes to the copy. And later promote that copy
-    to the live theme.
+    <%= Spree.t(:themes_info) %>
   </div>
   <br />
 
@@ -18,9 +16,9 @@
     <div class="alert alert-info d-inline-flex align-items-center py-2 pr-2">
       <div class="d-flex align-items-center">
         <span>
-          You don't have domain connected to your store
+          <%= Spree.t(:no_domain_connected) %>
         </span>
-        <%= link_to 'Connect your own domain', spree.admin_custom_domains_path, class: 'btn btn-link ml-3' %>
+        <%= link_to Spree.t(:connect_your_own_domain), spree.admin_custom_domains_path, class: 'btn btn-link ml-3' %>
       </div>
     </div>
   <% end %>
