--- a/admin/app/views/spree/admin/users/_lifetime_stats.html.erb
+++ b/admin/app/views/spree/admin/users/_lifetime_stats.html.erb
@@ -21,7 +21,7 @@
 
       <div class="col-lg-4">
         <div class="d-flex justify-content-center flex-column mb-3 mb-lg-0">
-          <span class="text-muted"><%= Spree.t('admin.avg_order_value') %></span>
+          <span class="text-muted"><%= Spree.t(:avg_order_value) %></span>
           <span class="font-size-lg text-dark font-weight-bold mt-1 me-3">
             <%= @user.display_average_order_value %>
           </span>
