--- a/storefront/app/views/spree/checkout/_delivery.html.erb
+++ b/storefront/app/views/spree/checkout/_delivery.html.erb
@@ -1,19 +1,8 @@
 <%= form_for @order, url: spree.update_checkout_path(@order.token, @order.state), data: { controller: 'checkout-delivery' } do |form| %>
   <div class="mb-5">
-    <%= turbo_frame_tag :checkout_lock_version do %>
-      <%= hidden_field_tag 'order[state_lock_version]', @order.state_lock_version %>
-    <% end %>
+    <%= render 'spree/checkout/order_lock_version', order: @order %>
     <div id="shipping-method">
-      <% if @order.backordered_variants.any? %>
-        <div class="alert rounded border border-default text-sm p-5 mb-6">
-          <%= Spree.t("storefront.checkout.backorder_notice") %>
-          <ul class="list-disc list-inside flex-col flex space-y-1 mt-2">
-            <% @order.backordered_variants.each do |variant| %>
-              <li><%= variant.name %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
+      <%= render 'spree/checkout/delivery_backorder_notice', order: @order %>
 
       <div id="methods">
         <%= form.fields_for :shipments do |ship_form| %>
@@ -27,28 +16,7 @@
             </h5>
             <ul class="rounded-md list-group mb-4 border border-default border-b-0 text-sm border-default" data-checkout-delivery-target="shippingList">
               <% ship_form.object.shipping_rates.includes(:shipping_method, :tax_rate).each do |rate| %>
-                <li class="list-group-item p-0 m-0 border-b delivery-list-item border-default" data-checkout-delivery-target="shippingRate">
-                  <div class="custom-control custom-radio flex items-center px-5 py-4">
-                    <%= ship_form.radio_button :selected_shipping_rate_id,
-                      rate.id,
-                      class: 'custom-control-input radio-input',
-                      id: "shipping-rate-#{rate.id}",
-                      data: {
-                        action: 'click->checkout-delivery#update',
-                        cost: rate.display_cost,
-                        tax: rate.display_tax_amount
-                      } %>
-                    <label class="select-none cursor-pointer px-2 word-break w-full" for="<%= "shipping-rate-#{rate.id}" %>">
-                      <%= rate.name %>
-                      <% if rate.delivery_range %>
-                        <span class="text-gray-600 text-xs ml-3"><%= rate.display_delivery_range %></span>
-                      <% end %>
-                    </label>
-                    <span class="text-right">
-                      <%= rate.cost <= 0 ? Spree.t(:free) : rate.display_cost %>
-                    </span>
-                  </div>
-                </li>
+                <%= render 'spree/checkout/delivery_shipping_rate', ship_form: ship_form, rate: rate %>
               <% end %>
             </ul>
           </div>
